# open-market

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: OpenMarketUserManual.md
market/: Models.py  Routes.py  __init__.py  forms.py
market/Templates/: account.html  base.html  home.html  login.html  market.html  register.html
market/Templates/includes/: add_items_modals.html  items_modals.html  owned_items_modals.html
