[tool.poetry]
name = "OpenMarket"
version = "1.0.0"
description = "Online Market on Flask"
authors = ["Yuuto Akihiro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-migrate = "^4.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
